# libnewton

./: .gitignore  .gitmodules  .makefile.swp  2  CMakeLists.txt  \  build-beaglebone.sh  build-full.bash  build-submodules.bash  compile_flags.txt  makefile
doc/: ethercat-notes.txt
src/: basler-camera-cli.cpp  basler-camera.cpp  bits.cpp  client.cpp  ethercat.cpp  galil.cpp  heap.cpp  maxon.cpp  net.cpp  nsignals.cpp  server.cpp
src/newton/: basler-camera-cli.hpp  basler-camera.hpp  bits.hpp  client.hpp  ethercat.hpp  forkextra.hpp  galil.hpp  heap.hpp  macro.hpp  maxon.hpp  net.hpp  nsignals.hpp  server.hpp
